--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
@@ -52,6 +53,8 @@
     "react-cookie": "^2.1.2",
     "react-dom": "^15.2.0",
     "react-router-dom": "^4.2.2",
-    "sequelize": "^4.28.6"
+    "sequelize": "^4.28.6",
+    "universal-cookie": "^2.1.2",
+    "universal-cookie-express": "^2.1.2"
   }
 }
